--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -15,9 +15,9 @@ dist-ssr
 # Environment files
 .env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.development
+.env.test
+.env.production
 
 # Editor directories and files
 .vscode/*
